--- a/reactjsx/src/App.css
+++ b/reactjsx/src/App.css
@@ -13,15 +13,18 @@
 
 .roadmap {
   display: flex;
-  height: 100vh;
+  height: 80vh;
+  max-height: 80vh;
   box-sizing: border-box; 
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .sidebar {
   flex: 1;
   overflow-y: auto; 
   padding: 10px;
-  border-right: 1px solid #ccc;
+  /* border-right: 1px solid #ccc; */
   box-sizing: border-box;
   height: 100vh; 
 }
@@ -294,12 +297,24 @@ NAVBAR CSS */
   background-color: transparent;
 }
 
+#navbar_opt{
+   position: relative; 
+   top: -4px; 
+}
+
 .btn {
 	border: none;
 }
 
 .op:hover {
 	background-color: rgba(255, 255, 255, 0.195);
+}
+
+#navbar_ai_text{
+  position: relative; 
+  top: 5px;
+  font-size: "1.5rem";
+  padding:"none";
 }
 
 /* Hamburger */
@@ -420,10 +435,9 @@ NAVBAR CSS */
 
 #navbar_ai{
   display: block;
-  font-size: 1.9em;
   animation: rotate 2s linear infinite;
   transform-origin: center;
-  margin-top: -12px;
+  margin-top: -5px;
 }
 
 @keyframes rotate {
@@ -557,7 +571,7 @@ home css */
   text-align: center;
   padding: 10px 20px;
   font-size: 14px;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
 }
@@ -607,6 +621,44 @@ home css */
   color: #03a9f4;
   animation: animate 2s ease-in-out infinite;
 }
+
+/* Scroll Bars */
+.homePage,.aboutPage{
+  overflow-y: scroll;
+  /* overflow-x: hidden; */
+  height: 100vh;
+}
+
+.content::-webkit-scrollbar,
+.sidebar::-webkit-scrollbar,
+.aboutPage::-webkit-scrollbar,
+.homePage::-webkit-scrollbar,
+.langbody::-webkit-scrollbar {width: 12px;}
+
+.content::-webkit-scrollbar-track,
+.sidebar::-webkit-scrollbar-track,
+.aboutPage::-webkit-scrollbar-track,
+.homePage::-webkit-scrollbar-track,
+.langbody::-webkit-scrollbar-track {
+    background-image:radial-gradient(#C5C6C7,#888);
+    border-radius: 10px;
+}
+
+.content::-webkit-scrollbar-thumb,
+.sidebar::-webkit-scrollbar-thumb,
+.aboutPage::-webkit-scrollbar-thumb,
+.homePage::-webkit-scrollbar-thumb,
+.langbody::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+.content::-webkit-scrollbar-thumb:hover,
+.sidebar::-webkit-scrollbar-thumb:hover,
+.aboutPage::-webkit-scrollbar-thumb:hover,
+.homePage::-webkit-scrollbar-thumb:hover,
+.langbody::-webkit-scrollbar-thumb:hover {background-color: #66fcf276;}
+
 
 .homesection {
   width: 50%;
@@ -1247,11 +1299,7 @@ body {
 }  
 @media only screen and (max-width: 1400px) {  
   .para{overflow-y: scroll};  
-}  
-@media only screen and (max-width: 900px){  
-  img{display:none;}  
 }
-
 
 
 
@@ -1696,8 +1744,7 @@ a {
       }
   }
 
-/* 
-  AI CSS */
+/* AI CSS */
   .aiPage {
     background-image: radial-gradient(#0d131b, #1F2833, #0d131b);
     display: flex;
