--- a/reactjsx/src/App.css
+++ b/reactjsx/src/App.css
@@ -480,7 +480,7 @@ div.borderXwidth a:after {
 div.borderXwidth a:hover:before,
 div.borderXwidth a:hover:after {
 	opacity: 1;
-	width: 90%;
+	width: 98.5%;
 }
 
 /*****/
@@ -561,10 +561,7 @@ div.borderXwidth a:hover:after {
 	font-size: xx-large;
 }
 
-
-
-/* 
-home css */
+/* home css */
 .roadmapfooter {
   background-image: linear-gradient(transparent,#19191a,#19191a);
   color: #fff;
@@ -621,6 +618,47 @@ home css */
   color: #03a9f4;
   animation: animate 2s ease-in-out infinite;
 }
+
+.aboutPage{overflow-x: hidden;}
+
+.about_profile_btn{
+  background-color: rgb(0, 149, 255);
+}
+
+.about_profile_btn:hover {
+  color: blue;
+  cursor: pointer;
+  background-color: #66FCF1;
+}
+
+.about_profiles {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 10px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  width: 100%;
+  height: 80%;
+}
+
+.about_profiles::-webkit-scrollbar {
+  display: none;
+}
+
+.about_profiles {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.about_card {
+  padding-top:35px ;
+  width: 300px !important;
+  height: 450px;
+  flex: 0 0 auto;
+}
+
+
 
 /* Scroll Bars */
 .homePage,.aboutPage{
@@ -1389,11 +1427,10 @@ a {
 }
 
 .aboutus {
-  height: 30%;
+  height: 40%;
   text-align: center;
   font-size: 6.5rem;
   text-shadow: var(--textshadow);
-  height: 40vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1518,7 +1555,7 @@ a {
 }
 
 .meet {
-  margin-bottom: 40vh;
+  margin-bottom: 10vh;
   font-size: 3.57rem;
   text-align: center;
   color: var(--fontcolor);
@@ -1562,13 +1599,13 @@ a {
 }
 
 .extra {
-  height: 50vh;
+  margin: 2vh 0 15vh 0;
   text-align: center;
   align-content: center;
 }
 
 .extra-detail{
-  margin-top: 8vh;
+  margin-top: 2vh;
   font-size: 2.5rem;
   color: #51cfc8;
   text-shadow: var(--textshadow);
@@ -1749,7 +1786,7 @@ a {
     background-image: radial-gradient(#0d131b, #1F2833, #0d131b);
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 94vh;
     width: 100vw;
     overflow: hidden;
 }
@@ -1768,15 +1805,18 @@ a {
     margin-bottom: 0.2rem;
 }
 .history {
+    height: 60vh;
+    width: 40vw;
     padding:0.5rem;
     background-color: #c5c6c7b5;
+    overflow: auto;
 }
 .history-list{
-    height: 50vh;
-    width: 10vw;
     overflow: auto;
     text-wrap: nowrap;
     padding: none;
+    height: 100%; 
+    width: 100%;
     /* overflow-x: hidden; */
     /* text-wrap: nowrap;
     list-style-type: none;  */
@@ -1789,65 +1829,62 @@ a {
 
 .history-item:hover{
     cursor:pointer;
+    border-radius: 10px;
+    padding: 4px;
     color: #1F2833;
     background-color: #66fcf29d;
+    font-style: italic;
+    font-size: 13.5px;
     /* background-color: #66fcf29d; */
 }
-/* .history-item:nth-child(even) {
-    background-color: #;
-} */
+
+.chatWindow{
+    height: 70vh;
+    width: 75vw;
+    overflow: auto;
+  }
 
 .ai_win {
     padding: 0.5rem;
     padding-bottom: 0.1rem !important;
+    height: fit-content;
+    border-radius: 10px;
+}
+
+#input_age,
+#input_day,
+#input_name,
+#input_language,
+#input_level {
+  border: none;
+  border-radius: 2em;
+  margin: 0.8rem 1rem 2px 0;
+  height: 4vh;
 }
 
 #input_age{
-  border:none;
-  border-radius: 2em 2em 2em 2em;
-  margin:0.8rem 1rem 2px 0;
-  height: 4vh;
-  width: 3.7rem;
+  width: 20%;
 }
 
 #input_day{
-  border:none;
-  border-radius: 2em 2em 2em 2em;
-  margin:0.8rem 1rem 2px 0;
-  height: 4vh;
-  width: 4rem;
+  width: 20%;
 }
 
 #input_name{
-  border:none;
-  border-radius: 2em 2em 2em 2em;
-  margin:0.8rem 1rem 2px 0;
-  height: 4vh;
-  width: 10rem;
+  width: 60%;
 }
 
 #input_language{
-  border:none;
-  border-radius: 2em 2em 2em 2em;
-  margin:0.8rem 1rem 2px 0;
-  height: 4vh;
-  width: 14rem;
+  width: 70%;
 }
 
 #input_level{
-  border:none;
-  border-radius: 2em 2em 2em 2em;
-  margin:0.8rem 1rem 2px 0;
-  height: 4vh;
-  width: 7.2rem;
-  color: grey; /* Set default text color */
-
+  width: 36.5%;
+  color: grey;
 }
 
 .input-container {
-    /* background-color: #C5C6C7; */
     background-color: #c5c6c7cc;
-
     padding-bottom: 13px;
     margin-bottom: 8px;
     /* display: flex; */
@@ -1864,12 +1901,11 @@ a {
 
 #input_prompt {
     border: none;
-    /* border-color: rgb(146, 145, 145); */
     border-radius: 2em 0 0 2em;
     padding-left: 10px;
     flex: auto;
     height: 4vh;
-    width: 60vw;
+    width: 100%; 
 }
 
 #input_level:hover{font-style: italic;}
@@ -1884,7 +1920,7 @@ a {
 
 #output_prompt {
     padding: 0.8rem;
-    height: 40vh;
+    height: 35vh;
     overflow-y: auto;
     margin-bottom: 1rem;
 }
@@ -1915,10 +1951,7 @@ a {
 /************/
 .send-button {
     border: none;
-    /* color: white; */
     background-image:radial-gradient(#C5C6C7,#888);
-
-    /* background-color: rgb(93, 92, 92); */
     border-radius: 0 2em 2em 0;
     padding: 2px 10px 2px;
     cursor: pointer;
@@ -1931,8 +1964,48 @@ a {
 }
 
 .send-button:hover {
-    /* background-image: radial-gradient(#66FCF1,#888); */
+    /* background-image: radial-gradient(#,#888); */
     background-image: none;
     background-color: #66fcf2cc;
     color: darkblue;
 }
+
+.rotate-text {
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+.send-button:hover .rotate-text {
+  transform: rotate(-45deg);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/***********************************************/
+
+
+
+
+
+
+
+/***********************************************/
