--- a/reactjsx/src/App.css
+++ b/reactjsx/src/App.css
@@ -4,29 +4,29 @@
 
 .langbody {
   background-image: radial-gradient(#1F2833, #0d131b, #1F2833);
-   margin: 0;
+  margin: 0;
   height: 100vh;
-  overflow-y: auto; 
-  overflow-x: hidden; 
-  box-sizing: border-box;  
+  overflow-y: auto;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .roadmap {
   display: flex;
-  height: 80vh;
+  height: 78.5vh;
   max-height: 80vh;
-  box-sizing: border-box; 
-  padding-bottom: 2rem;
-  margin-bottom: 2rem;
+  box-sizing: border-box;
+  margin-bottom: 1.2rem;
+  overflow-y: hidden;
 }
 
 .sidebar {
   flex: 1;
-  overflow-y: auto; 
+  overflow-y: auto;
   padding: 10px;
   /* border-right: 1px solid #ccc; */
   box-sizing: border-box;
-  height: 100vh; 
+  height: 80vh;
 }
 
 .sidebardiv {
@@ -34,15 +34,18 @@
   margin: 5px;
   padding: 20px;
   border: 1px solid grey;
+  border-radius: 10px;
   overflow-wrap: break-word;
   margin-bottom: 10px;
   text-align: center;
-  box-sizing: border-box; /* Add this line */
+  box-sizing: border-box;
 }
+
 .langname {
   font-size: 20px;
   text-align: center;
 }
+
 .anchorTag {
   text-decoration: none;
   color: #66FCF1;
@@ -57,7 +60,7 @@
   padding: 10px;
   overflow-y: auto;
   box-sizing: border-box;
-  height: 100vh; 
+  height: 80vh;
 }
 
 .contentdiv {
@@ -71,10 +74,12 @@
   padding: 50px;
   box-sizing: border-box;
 }
+
 .sitelink {
   text-decoration: none;
   color: rgb(212, 229, 28);
 }
+
 .contentdiv:hover {
   box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
   color: rgb(136, 192, 190);
@@ -92,6 +97,7 @@
 .description {
   color: #e5f4f3;
 }
+
 .links {
   color: #1877F2;
 }
@@ -101,7 +107,7 @@
     flex-direction: column;
   }
 
-  .sidebar {
+ .sidebar {
     width: 100%;
     border-right: none;
     border-bottom: 1px solid #ccc;
@@ -159,20 +165,14 @@
 
 
 
-
-
-
-/* Language */ 
+/* Language */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
  
-.lang {
-  box-sizing: border-box;
-} 
-
 .lang {
   font-family: 'Poppins', sans-serif;
   color: black;
   /* background-color: #0B0C10; */
+  box-sizing: border-box;
   background-image: radial-gradient(#1F2833,#0d131b,#1F2833);
   display: flex;
   justify-content: center;
@@ -180,6 +180,11 @@
   width: 100vw;
   margin: 0px auto;
 }
+
+@media screen and(max-width:775px){
+  .lang{height: 99vh;}
+}
+
 
 .main-container {
   display: flex;
@@ -204,7 +209,7 @@
   flex-direction: column;
   width: 130px;
   height: 130px;
-  margin: 0.5em; 
+  margin: 0.5em;
   /* background-color: #1f2833; */
   background-image: radial-gradient(#0b0c1049, rgba(1, 1, 37, 0.308));
   color: #66FcF1;
@@ -282,8 +287,8 @@
 }
 
 
-/* 
-NAVBAR CSS */
+
+/* NAVBAR CSS */
 #nav_img{
 	max-height: 3.5rem;
 	max-width: 20rem;
@@ -298,8 +303,8 @@ NAVBAR CSS */
 }
 
 #navbar_opt{
-   position: relative; 
-   top: -4px; 
+   position: relative;
+   top: -4px;
 }
 
 .btn {
@@ -311,11 +316,13 @@ NAVBAR CSS */
 }
 
 #navbar_ai_text{
-  position: relative; 
+  position: relative;
   top: 5px;
   font-size: "1.5rem";
   padding:"none";
 }
+
+
 
 /* Hamburger */
 
@@ -368,7 +375,7 @@ NAVBAR CSS */
 
 .menu {
 	position: fixed;
-	top: 0%;
+	top: 3%;
 	z-index: 1000 !important;
 	right: -400px;
 	width: 400px;
@@ -409,11 +416,14 @@ NAVBAR CSS */
 .side_menu {
 	background-color: #424040ad;
 }
+
 .menu a:hover {
 	background-color: #cfc6c6b6;
 }
 
 /*****************************************************************/
+
+
 
 /* NavBar Element Font*/
 
@@ -431,6 +441,8 @@ NAVBAR CSS */
 
 /**************************************************************/
 
+
+
 /* Ai Button */
 
 #navbar_ai{
@@ -445,6 +457,8 @@ NAVBAR CSS */
   to {transform: rotate(360deg);}
 }
 
+
+
 /* NavBar Element design */
 
 div.div1 a {
@@ -454,6 +468,7 @@ div.div1 a {
 }
 
 /* Border X get width  */
+
 div.borderXwidth a:before,
 div.borderXwidth a:after {
 	position: absolute;
@@ -484,6 +499,8 @@ div.borderXwidth a:hover:after {
 }
 
 /*****/
+
+
 
 /* Responsiveness */
 
@@ -527,6 +544,8 @@ div.borderXwidth a:hover:after {
 
 /***************/
 
+
+
 /* Modal */
 
 .modal-content{
@@ -554,6 +573,7 @@ div.borderXwidth a:hover:after {
 	color: rgba(29, 29, 29, 0.676);
 	font-style:italic;
 }
+
 .bi{
 	color:#66FCF1;
 	padding-top: 2px;
@@ -561,7 +581,10 @@ div.borderXwidth a:hover:after {
 	font-size: xx-large;
 }
 
-/* home css */
+
+
+/* Home Page CSS */
+
 .roadmapfooter {
   background-image: linear-gradient(transparent,#19191a,#19191a);
   color: #fff;
@@ -623,12 +646,14 @@ div.borderXwidth a:hover:after {
 
 .about_profile_btn{
   background-color: rgb(0, 149, 255);
+  transition: transform 0.4s ease, background-color 0.4s ease;
 }
 
 .about_profile_btn:hover {
   color: blue;
   cursor: pointer;
   background-color: #66FCF1;
+  transform: scale(1.07);
 }
 
 .about_profiles {
@@ -913,17 +938,19 @@ div.borderXwidth a:hover:after {
   color: #78aaa7;
   font-size: 50px;
   text-align: center;
-
   margin-bottom: 100px;
 }
 
 .roadmap-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 40px;
-  padding: 20px;
-  margin-bottom: 30px;
-   justify-items: center; 
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  padding: 45px 0 120px 70px;
+  gap: 80px; 
+  overflow-x: auto;
+  overflow-y: hidden;
+  width: 100%;
+  height: auto;
 }
 
 .roadmap-container div {
@@ -932,15 +959,49 @@ div.borderXwidth a:hover:after {
   cursor: pointer;
   text-align: center;
   vertical-align: middle;
-  line-height: 200px;
-  width:190px;
-  height:190px;
+  line-height: 80px;
+  padding-bottom:60px ;
+  width:200px;
+  height:200px;
   background-color: rgba(68, 118, 127, 0.203);
-  border-radius: 0%;
+  border-radius: 10px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.roadmap-container::-webkit-scrollbar {
+  display: none;
+}
+
+.roadmap-cpp,
+.roadmap-python,
+.roadmap-react,
+.roadmap-html,
+.roadmap-java {
+  padding: 20px;
+  width: 200px;
+  height:200px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #f0f0f0;
+}
+
+.roadmap-cpp img,
+.roadmap-python img,
+.roadmap-react img,
+.roadmap-html img,
+.roadmap-java img{
+  padding-top: 60%;
+  height: 160%;
+  margin-bottom: 0%;
 }
 
 .roadmap-container div img {
-  top: 18%;
+  top: -18%;
   left: 37%;
 }
 
@@ -1073,8 +1134,6 @@ body {
 }
 
 /* Login CSS */
-
- 
 
 .login-box {
   display: flex;
@@ -1244,7 +1303,10 @@ body {
   height: 100vh; 
   overflow: hidden;
 }  
-  
+
+@media only screen and (max-width: 900px){
+  .langingPage_img{display:none;}
+}
 
 .para::-webkit-scrollbar {width: 12px;}
 
@@ -1261,15 +1323,13 @@ body {
 .para::-webkit-scrollbar-thumb:hover {background-color: #66fcf276;}
 
 
-
 /* Heading styles */  
 .custom-heading {  
   color: #66FCF1;  
   text-shadow: 100rem;  
   text-wrap: nowrap;  
-}  
-  
-  
+}
+ 
 .section-container > div {  
   height: fit-content;  
   background-color: rgba(245, 245, 245, 0.216);  
@@ -1283,7 +1343,7 @@ body {
   animation-duration: 8s; 
   animation-fill-mode: forwards; 
   transition: ease;  
-}  
+}
 
 /* Paragraph styles */  
 .para {
@@ -1494,11 +1554,6 @@ a {
   width: 50%;
   border-radius: 40px;
   padding: 30px;
-  transition: all .3s ease-in;
-}
-
-.why img:hover {
-  scale: 1.02;
 }
 
 .vision {
@@ -1523,12 +1578,8 @@ a {
   height: 420px;
   border-radius: 40px;
   padding: 30px;
-  transition: all .3s ease-in;
 }
 
-.vision img:hover {
-  scale: 1.02;
-}
 
 /* .vision h2 {
   margin-left: 25px;
@@ -1782,14 +1833,31 @@ a {
   }
 
 /* AI CSS */
-  .aiPage {
+.aiPage{
     background-image: radial-gradient(#0d131b, #1F2833, #0d131b);
+    overflow: hidden;
+}
+
+.aiChatPage {
     display: flex;
     flex-direction: column;
+    /* height: 50% !important; */
     height: 94vh;
+    /* height: 96vh; */
     width: 100vw;
     overflow: hidden;
 }
+@media screen and (max-width: 772px) {
+  .aiChatPage {
+    height: 95vh;
+  }
+}
+@media screen and (max-width: 481px) {
+  .aiChatPage {
+    height: 95.7vh;
+  }
+}
+
 .aiPage_head{
     /* background-image: linear-gradient(to bottom right, rgb(244, 151, 151), #e44848); */
     background-image: linear-gradient(to bottom right, rgb(244, 151, 151), #e44848, #ff6600, #ffcc00);
@@ -1805,22 +1873,50 @@ a {
     margin-bottom: 0.2rem;
 }
 .history {
-    height: 60vh;
-    width: 40vw;
+    height: 65.5vh;
+    /* width: 40vw; */
     padding:0.5rem;
     background-color: #c5c6c7b5;
     overflow: auto;
 }
+.history_box{
+  margin-top: 1rem;
+  /* margin-top: 1.5rem; */
+  margin-left: 1rem;;
+  margin-right: 1rem;;
+  width: 40vw;
+  
+}
+
+@media screen and (max-width: 690px) {
+  .history_box{
+    display:none;
+  }
+  .history-button{
+    display: block;
+  }
+  .chatWindow{
+    width:80vw;
+    margin-left: 3rem;
+  }
+}
+@media screen and (max-width: 907px) {
+  .history_box {
+    margin-top: 0.9rem;
+  }
+  .input-container{
+    height:26vh;
+  }
+}
+
 .history-list{
     overflow: auto;
     text-wrap: nowrap;
     padding: none;
     height: 100%; 
     width: 100%;
-    /* overflow-x: hidden; */
-    /* text-wrap: nowrap;
-    list-style-type: none;  */
 }
+
 .history-list >p{
     text-wrap: nowrap;
     list-style-type: none; 
@@ -1838,10 +1934,32 @@ a {
     /* background-color: #66fcf29d; */
 }
 
+.history-button{
+  border: none;
+  background-image:radial-gradient(#C5C6C7,#888);
+  /* border-radius: 0 2em 2em 0; */
+  border-radius: 2em;
+  padding: 2.5px 5px 3px 7px;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 4vh;
+  margin-right: 1rem;
+  display:none;
+}
+
+/* .history-button:hover .rotate-text2 {
+  transform: rotate(-90deg);
+  padding-left: 2px;
+} */
+
 .chatWindow{
     height: 70vh;
     width: 75vw;
     overflow: auto;
+    margin-right: 1rem;
+
   }
 
 .ai_win {
@@ -1887,6 +2005,9 @@ a {
     background-color: #c5c6c7cc;
     padding-bottom: 13px;
     margin-bottom: 8px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    height:27vh
     /* display: flex; */
     /* align-items: center; */
     /* justify-content: center; */
@@ -1927,23 +2048,27 @@ a {
 
 /* Scrol bar */
 .history::-webkit-scrollbar,
+.input-container::-webkit-scrollbar,
 #output_prompt::-webkit-scrollbar {
     width: 12px;
 }
 
 .history::-webkit-scrollbar-track,
+.input-container::-webkit-scrollbar-track,
 #output_prompt::-webkit-scrollbar-track {
     background-image:radial-gradient(#C5C6C7,#888);
     border-radius: 10px;
 }
 
 .history::-webkit-scrollbar-thumb,
+.input-container::-webkit-scrollbar-thumb,
 #output_prompt::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 10px;
 }
 
 .history::-webkit-scrollbar-thumb:hover,
+.input-container::-webkit-scrollbar-thumb:hover,
 #output_prompt::-webkit-scrollbar-thumb:hover {
     background-color: #66fcf276;
 }
@@ -1960,9 +2085,9 @@ a {
     width: 2rem;
     height: 4vh;
     margin-bottom: -15px;
-
 }
 
+.history-button:hover,
 .send-button:hover {
     /* background-image: radial-gradient(#,#888); */
     background-image: none;
@@ -1970,6 +2095,7 @@ a {
     color: darkblue;
 }
 
+.rotate-text2,
 .rotate-text {
   display: inline-block;
   transition: transform 0.3s ease;
@@ -1979,33 +2105,23 @@ a {
   transform: rotate(-45deg);
 }
 
+.heart-beat {
+  width: 10px;
+  height: 10px;
+  animation: beating 0.8s infinite;
+  font-size: 10px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 6px;
+}
 
+@keyframes beating {
+  0% {
+      font-size: 10px;
+  }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/***********************************************/
-
-
-
-
-
-
-
-/***********************************************/
+  100% {
+      font-size: 20px;
+  }
+}
